--- a/anna_flight.ipynb
+++ b/anna_flight.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9XCj9B5tjNYZLlRujjRBf",
+      "authorship_tag": "ABX9TyPk69hjMiXqanRjXms9MIl0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Obtener la información sobre el data"
+        "## Obtener la información sobre el data set"
       ],
       "metadata": {
         "id": "G-bUZA9gsT8z"
