--- a/anna_flight.ipynb
+++ b/anna_flight.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPk69hjMiXqanRjXms9MIl0",
+      "authorship_tag": "ABX9TyOlxLx9k1qenUDYjlKougVg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -461,7 +461,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Cargo muestra dataframe de 100k"
+        "## Cargar una muestra dataframe de 100k"
       ],
       "metadata": {
         "id": "-MKW-iH_uSWN"
