--- a/anna_flight.ipynb
+++ b/anna_flight.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlxLx9k1qenUDYjlKougVg",
+      "authorship_tag": "ABX9TyO7/RZ/Qixy3hRYxkhvJb92",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -769,7 +769,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Graficar top 10 aerolineas"
+        "## Top 10 aerolineas"
       ],
       "metadata": {
         "id": "R6Mk8yiFwEB7"
