--- a/flightontime_hackaton_e32_alura_latam.ipynb
+++ b/flightontime_hackaton_e32_alura_latam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMsUp9SAt9TISUko5ukzISf",
+      "authorship_tag": "ABX9TyMWEBieKHuNR/uQqv3RhFFT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Notebook con alalisis de atrasos de vuelos"
+        "# FlightOnTime ✈️ Data Science"
       ],
       "metadata": {
         "id": "asV7iNlbMBks"
@@ -39,19 +39,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Comportacion final de los datasets presentados por miembros del equiopo"
+        "## Comportación final de los datasets presentados por miembros del equipo\n",
+        "\n",
+        "Esa se basa en los resultados de evaluación previa de cada notebook"
       ],
       "metadata": {
         "id": "gnjVtjKSMK9_"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Ese se basa en los resultados de evaluación previa de cada notebook"
-      ],
-      "metadata": {
-        "id": "prj0PuUKMZot"
       }
     },
     {
@@ -354,7 +347,7 @@
         "id": "oIaId7UIWfRP",
         "outputId": "54c66a6b-1f7a-4c80-ef47-8a49ad869fa6"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,7 +405,7 @@
       "metadata": {
         "id": "KZAhjVNrac8s"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -448,7 +441,7 @@
         "id": "kK58QXUrzpez",
         "outputId": "4cad3759-541d-485c-e71b-64f94ed7bec9"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +889,7 @@
         "id": "ZrIN7YSC1DVp",
         "outputId": "a342b6ae-81d3-4b9f-df2c-76a0746827eb"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -929,7 +922,7 @@
         "id": "zrJH4G3C0wsj",
         "outputId": "01b50de4-2ba3-44c1-8bfe-dce7e3331e1f"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1139,7 +1132,7 @@
         "id": "KzpOw1gAzUkk",
         "outputId": "56e72eb6-75bd-42eb-d89c-16663e2e5f4b"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1718,7 +1711,7 @@
         "id": "g9DsN_POzPxG",
         "outputId": "59e29d52-f69c-4156-da89-d2212d14b209"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1799,7 +1792,7 @@
         "num_duplicates = df.duplicated().sum()\n",
         "print(f\"Number of duplicate rows: {num_duplicates}\")"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1846,7 +1839,7 @@
         "id": "IQnE3gwU4dyC",
         "outputId": "fb56e669-40fd-471d-f500-f70b61d18f34"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
