--- a/flightontime_hackaton_e32_alura_latam.ipynb
+++ b/flightontime_hackaton_e32_alura_latam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWEBieKHuNR/uQqv3RhFFT",
+      "authorship_tag": "ABX9TyPYpPCAc+KRW+KBceam7ht+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1897,7 +1897,7 @@
       "source": [
         "## **Correlaciones**\n",
         "\n",
-        "¿Si la variable A sube, la variable B también? Esto te dirá qué datos son realmente importantes para tu predicción."
+        "¿Si la variable A sube, la variable B también? Esto nos dirá qué datos son realmente importantes para la predicción."
       ],
       "metadata": {
         "id": "j6Lu9crg_Tsb"
@@ -1917,7 +1917,7 @@
       "source": [
         "## **Distribuciones**\n",
         "\n",
-        "*   Revisar si tus datos siguen una curva normal o si están muy sesgados hacia un lado.\n",
+        "*   Revisar si los datos siguen una curva normal o si están muy sesgados hacia un lado.\n",
         "*   Buscar patrones usando gráficos (Matplotlib, Seaborn o Plotly)."
       ],
       "metadata": {
