--- a/flightontime_hackaton_e32_alura_latam.ipynb
+++ b/flightontime_hackaton_e32_alura_latam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM+mIrpVlw3Hq0yBRsF2/qI",
+      "authorship_tag": "ABX9TyNjQOTHnoy4KYNCs4NwwZEg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -299,7 +299,7 @@
         "id": "tCtZZ84VWiq0",
         "outputId": "52841531-7934-4e57-8b58-b19185f2a274"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +354,7 @@
         "id": "oIaId7UIWfRP",
         "outputId": "8ee5288e-90ef-4423-b7a5-2f171a60cc8a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,7 +412,7 @@
       "metadata": {
         "id": "KZAhjVNrac8s"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -448,7 +448,7 @@
         "id": "kK58QXUrzpez",
         "outputId": "7f197834-bd74-4832-a283-b3595fde8ed6"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +896,7 @@
         "id": "ZrIN7YSC1DVp",
         "outputId": "cf933be9-0c56-41d8-e703-53b72fd87867"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -929,7 +929,7 @@
         "id": "zrJH4G3C0wsj",
         "outputId": "8bcf8677-9fd8-443b-80c1-987e5ed6e34e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1139,7 +1139,7 @@
         "id": "KzpOw1gAzUkk",
         "outputId": "78b7aae4-7339-448b-8d91-63de50a46d4e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1718,7 +1718,7 @@
         "id": "g9DsN_POzPxG",
         "outputId": "fdc32e31-469c-4a38-d1f7-af203ef7982f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1799,7 +1799,7 @@
         "num_duplicates = df.duplicated().sum()\n",
         "print(f\"Número de filas duplicadas: {num_duplicates}\")"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1846,7 +1846,7 @@
         "id": "IQnE3gwU4dyC",
         "outputId": "17bb6125-99e7-478b-b98a-d38ff99d2bb4"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1905,7 +1905,7 @@
         },
         "outputId": "2fe7cb79-b4c1-4fc2-89f5-fa58cfb86cc6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2385,7 +2385,7 @@
         "id": "pPloe0iAZ6ka",
         "outputId": "8106ef71-bd2a-4e3c-8146-cb4c18db5afe"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2467,7 +2467,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2642,7 +2642,7 @@
         "plt.xlim(-50, 250) # Adjusted x-limit for better visibility of main distribution and tail\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2680,7 +2680,7 @@
         "plt.xlim(-50, 250) # Adjusted x-limit for better visibility of main distribution and tail\n",
         "plt.show()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2718,7 +2718,7 @@
         "plt.xlim(0, 2000) # Adjusted x-limit to show most common distances without extreme long-haul flights\n",
         "plt.show()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2808,7 +2808,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2889,7 +2889,7 @@
         "id": "nb4ekBEemxbX",
         "outputId": "ace16640-1827-4de7-cbd0-37115e5e1f1f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2997,7 +2997,7 @@
         "id": "9M2vpXvcqM1B",
         "outputId": "3438d435-ac7d-44c3-b2e1-b010494aa351"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3086,7 +3086,7 @@
         "id": "XA93dVZVrLPb",
         "outputId": "69e543bb-d99f-43a4-e30b-87e076c65304"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3164,7 +3164,7 @@
         "plt.grid(axis=\"y\")\n",
         "plt.show()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3233,7 +3233,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3264,6 +3264,117 @@
       "metadata": {
         "id": "CVPU3S_Py3_F"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ZAGtSUYTORVU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install kagglehub pyarrow requests"
+      ],
+      "metadata": {
+        "id": "ApArgeP9OVca"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*   Selección de las columnas para el entrenamiento\n",
+        "*   Normalización de nombres a minusculas\n",
+        "*   Elaboración de nuevas variables\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "P_sl4mHcOz5m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "columns_needed = [\n",
+        "    \"FlightDate\",\n",
+        "    \"OriginCityName\",\n",
+        "    \"CRSDepTime\",\n",
+        "    \"DepDelay\",\n",
+        "    \"Distance\",\n",
+        "    \"Marketing_Airline_Network\"\n",
+        "]\n",
+        "\n",
+        "\n",
+        "df.columns = df.columns.str.lower()\n",
+        "\n",
+        "df_base = df[columns_needed].copy()\n",
+        "df_base[\"hour\"] = df_base[\"crsdeptime\"] // 100\n",
+        "df_base[\"delayed\"] = (df_base[\"depdelay\"] >= 15).astype(int)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "4rrvNC_LOXwj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#muestra\n",
+        "\n",
+        "df_base = df_base.sample(5_000, random_state=42)\n",
+        "df_base.head()"
+      ],
+      "metadata": {
+        "id": "TpH4X2EiQlZn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Consultar a la API externa sobre el clima para agregar al dataset de entrenamiento"
+      ],
+      "metadata": {
+        "id": "4oqfh1yPQqn8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#geocoding\n",
+        "\n",
+        "import requests\n",
+        "\n",
+        "def geocode_city(city):\n",
+        "    url = \"https://geocoding-api.open-meteo.com/v1/search\"\n",
+        "    params = {\n",
+        "        \"name\": city,\n",
+        "        \"count\": 1,\n",
+        "        \"language\": \"en\",\n",
+        "        \"format\": \"json\",\n",
+        "        \"country\": \"US\"\n",
+        "    }\n",
+        "\n",
+        "    r = requests.get(url, params=params)\n",
+        "    r.raise_for_status()\n",
+        "    data = r.json()\n",
+        "\n",
+        "    if \"results\" not in data or len(data[\"results\"]) == 0:\n",
+        "        return None, None\n",
+        "\n",
+        "    return data[\"results\"][0][\"latitude\"], data[\"results\"][0][\"longitude\"]\n"
+      ],
+      "metadata": {
+        "id": "ZDpeIHu1Qp9t"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
