--- a/flightontime_hackaton_e32_alura_latam.ipynb
+++ b/flightontime_hackaton_e32_alura_latam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhuJdqwQOjnLOWjVUaRbvW",
+      "authorship_tag": "ABX9TyOCCy+dgu8WdAweVn9cevwJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4931,10 +4931,44 @@
       "source": [
         "# 5. Definición del Objetivo (Target)\n",
         "\n",
-        "Nuestra variables target es la `delayed`"
+        "Nuestra variable del objetivo es la `delayed`"
       ],
       "metadata": {
         "id": "bD9hhwgSVrGI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 6. Modelado"
+      ],
+      "metadata": {
+        "id": "jf8LznAoXYgA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import classification_report, roc_auc_score\n",
+        "import joblib\n",
+        "#joblib permite guardar y cargar modelos entrenados .pkl"
+      ],
+      "metadata": {
+        "id": "BtE_2h55XRvO"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Q7xI7h7FXv_a"
       }
     }
   ]
