Matriz de confusion

--- a/flightontime_hackaton_e32_alura_latam.ipynb
+++ b/flightontime_hackaton_e32_alura_latam.ipynb
@@ -6429,6 +6429,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conclusión: El modelo Random Forest parece ser la mejor opción en general."
+      ],
+      "metadata": {
+        "id": "iRDguYKe_dwm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5L3CRSx1_fwm"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
