--- a/flightontime_hackaton_e32_alura_latam.ipynb
+++ b/flightontime_hackaton_e32_alura_latam.ipynb
@@ -29,10 +29,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# FlightOnTime ✈️ Data Science"
+        "# FlightOnTime ✈️ Predicción de Retrasos Aéreos"
       ],
       "metadata": {
         "id": "asV7iNlbMBks"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Contexto\n",
+        "Los retrasos aéreos generan costos operativos, insatisfacción de pasajeros\n",
+        "y problemas logísticos. Este proyecto busca predecir si un vuelo\n",
+        "despegará puntual o con retraso, usando información disponible antes del vuelo."
+      ],
+      "metadata": {
+        "id": "0XQVm_pYh1PQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Objetivo\n",
+        "Desarrollar un modelo de clasificación binaria que estime la probabilidad\n",
+        "de retraso de un vuelo y pueda ser consumido por una API en tiempo real."
+      ],
+      "metadata": {
+        "id": "DQkma3Ujh3qY"
       }
     },
     {
