se agrega informacion al inicio del notebook

--- a/entrenamiento_mvp_flight.ipynb
+++ b/entrenamiento_mvp_flight.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOC2BTqhMN3iETUS6Yatl1s",
+      "authorship_tag": "ABX9TyP+0REe4PL3pWwBYvXN3wMR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,14 +36,35 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f5550de2"
+      },
+      "source": [
+        "# Análisis y Predicción de Retrasos en Vuelos\n",
+        "\n",
+        "Este notebook tiene como objetivo principal desarrollar y comparar modelos de Machine Learning para predecir si un vuelo sufrirá un retraso o no. Para ello, utilizamos un dataset que contiene información detallada sobre vuelos, incluyendo datos de la fecha, distancia, aerolínea y condiciones meteorológicas.\n",
+        "\n",
+        "## Contenido del Notebook:\n",
+        "\n",
+        "1.  **Carga y Preprocesamiento de Datos**: Se carga el dataset, se realiza una limpieza inicial para manejar valores nulos y datos inconsistentes, y se seleccionan las características relevantes para la predicción.\n",
+        "2.  **Modelado**: Se implementan y entrenan dos tipos de modelos de clasificación:\n",
+        "    *   **Regresión Logística**: Un modelo base para establecer un punto de referencia.\n",
+        "    *   **Random Forest**: Un modelo de conjunto que suele ofrecer mejor rendimiento.\n",
+        "3.  **Evaluación de Modelos**: Se evalúa el rendimiento de ambos modelos utilizando métricas clave como el `Classification Report` (precisión, recall, F1-score), `ROC AUC` y `Matrices de Confusión`. También se exploran umbrales de predicción alternativos para ajustar el equilibrio entre precisión y recall.\n",
+        "4.  **Análisis de Variables**: Se analiza la importancia de las características en la predicción, especialmente para la Regresión Logística, para entender qué factores influyen más en los retrasos.\n",
+        "5.  **Simulación de Endpoint**: Se simula un `endpoint` de predicción para demostrar cómo el modelo podría ser utilizado en un entorno real, procesando solicitudes y devolviendo predicciones de retraso y su probabilidad."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdPOYbPONjIg",
-        "outputId": "a12cea41-5b85-4027-eaca-0bf56df7a7db"
+        "outputId": "63b7fd70-882d-4843-df5d-b081ee091642"
       },
       "outputs": [
         {
@@ -85,8 +106,8 @@
         "import joblib\n",
         "#joblib permite guardar y cargar modelos entrenados .pkl\n",
         "\n",
-        "#df = pd.read_csv(\"dataset_vuelos_clima_final.csv\")\n",
-        "df = pd.read_csv(\"/content/dataset_vuelos_clima_final.csv\")\n",
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/sunnyday2/flight_on_time/refs/heads/desarrollo/dataset_vuelos_clima_final.csv\")\n",
+        "#df = pd.read_csv(\"/content/dataset_vuelos_clima_final.csv\")\n",
         "\n",
         "print(df.shape)\n",
         "df.head()\n",
@@ -233,9 +254,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l8YHUdQPOIxu",
-        "outputId": "7b140814-793b-47b7-95f4-6862a7f341fb"
+        "outputId": "9f5c6373-118b-40fb-e10a-b06f2ded5a30"
       },
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,9 +611,9 @@
           "height": 1000
         },
         "id": "1552v5m3OZYp",
-        "outputId": "af3e92e0-b6cb-450d-e2a6-cb12b0758f14"
+        "outputId": "ce1d0e1c-dabb-4ede-d85d-d269772ac6cb"
       },
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
