Se corrige el enumerado de títulos el primer nivel

--- a/flightontime_hackaton_e32_alura_latam.ipynb
+++ b/flightontime_hackaton_e32_alura_latam.ipynb
@@ -4952,7 +4952,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 5. Definición del Objetivo (Target)\n",
+        "# **5. Definición del Objetivo (Target)**\n",
         "\n",
         "Nuestra variable del objetivo es la `delayed`"
       ],
@@ -4963,7 +4963,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 6. Modelado"
+        "# **6. Modelado**"
       ],
       "metadata": {
         "id": "jf8LznAoXYgA"
@@ -6700,7 +6700,7 @@
       },
       "source": [
         "\n",
-        "### **1. Regresión Logística con Ajuste de Umbral (0.65)**\n",
+        "### **Regresión Logística con Ajuste de Umbral (0.65)**\n",
         "\n",
         "Originalmente, un vuelo se consideraba retrasado si la probabilidad predicha por la Regresión Logística era igual o superior a 0.5 (50%). Aquí, hemos subido ese umbral a **0.65 (65%)**. Esto significa que el modelo ahora es más estricto para clasificar un vuelo como retrasado; necesita estar más \"seguro\" de que habrá un retraso.\n",
         "\n",
@@ -6715,9 +6715,13 @@
         "*   **Ventaja:** Al aumentar el umbral, la precisión para la clase 'Retrasado' (0.33) **subió ligeramente** respecto al 0.31 original, lo que indica que cuando predice un retraso, es *un poco más probable* que sea correcto. Además, el número de falsas alarmas (Falsos Positivos) disminuyó significativamente (de 80 a 26 en la matriz de confusión).\n",
         "*   **Desventaja:** Sin embargo, el 'Recall' para los retrasos **bajó drásticamente** (de 0.58 a 0.21). Esto significa que el modelo ahora es mucho menos capaz de identificar todos los vuelos que *realmente* se retrasan. Solo detecta 13 de los 62 retrasos reales.\n",
         "\n",
-        "**Conclusión:** Este ajuste reduce las falsas alarmas, pero a costa de perder la detección de la mayoría de los retrasos reales. No es ideal si queremos detectar el mayor número posible de retrasos.\n",
-        "\n",
-        "### **2. Random Forest Ajustado**\n",
+        "**Conclusión:** Este ajuste reduce las falsas alarmas, pero a costa de perder la detección de la mayoría de los retrasos reales. No es ideal si queremos detectar el mayor número posible de retrasos."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Random Forest Ajustado**\n",
         "\n",
         "Aquí, el modelo Random Forest ha sido \"afinado\" (`tuned`) cambiando algunos de sus parámetros internos (como `n_estimators`, `max_depth`, `min_samples_leaf`). Estos ajustes buscan optimizar el rendimiento del modelo.\n",
         "\n",
@@ -6736,12 +6740,22 @@
         "*   **Falsas alarmas:** La matriz de confusión muestra que los Falsos Positivos (cuando predice retraso pero es puntual) subieron ligeramente de 23 a 28.\n",
         "*   **Retrasos no detectados:** Los Falsos Negativos (cuando predice puntual pero se retrasa) bajaron de 41 a 39.\n",
         "\n",
-        "**Conclusión:** Este ajuste fino del Random Forest llevó a un pequeño compromiso. Mejoró ligeramente la capacidad de detectar retrasos (recall) pero a costa de una ligera disminución en la precisión (más falsas alarmas). El rendimiento general medido por ROC AUC se mantuvo fuerte.\n",
-        "\n",
-        "### **Resumen General:**\n",
+        "**Conclusión:** Este ajuste fino del Random Forest llevó a un pequeño compromiso. Mejoró ligeramente la capacidad de detectar retrasos (recall) pero a costa de una ligera disminución en la precisión (más falsas alarmas). El rendimiento general medido por ROC AUC se mantuvo fuerte."
+      ],
+      "metadata": {
+        "id": "if7YemDb0A9U"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Resumen General**\n",
         "\n",
         "El **Random Forest (original o ajustado)** sigue siendo la mejor opción en comparación con la Regresión Logística, ya que mantiene un mejor equilibrio entre la precisión y la capacidad de identificar retrasos, y su ROC AUC es superior. Los ajustes en el umbral de la Regresión Logística, aunque reducen las falsas alarmas, sacrifican demasiados retrasos reales para ser útiles en este contexto."
-      ]
+      ],
+      "metadata": {
+        "id": "VAYqKQ740Twz"
+      }
     },
     {
       "cell_type": "markdown",
