--- a/flightontime_hackaton_e32_alura_latam.ipynb
+++ b/flightontime_hackaton_e32_alura_latam.ipynb
@@ -78,6 +78,26 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Los dataset evaluados permitieron crear lista con las variaciones para cada uno de los dataset.\n",
+        "Los analises realizados se encuentra en los siguientes notebooks:\n",
+        "\n",
+        "https://github.com/sunnyday2/flight_on_time/blob/desarrollo/notebook_analisis_de_datos_Javi.ipynb\n",
+        "\n",
+        "https://github.com/sunnyday2/flight_on_time/blob/desarrollo/notebook__flight_Rafa.ipynb\n",
+        "\n",
+        "https://github.com/sunnyday2/flight_on_time/blob/desarrollo/anna_flight.ipynb\n",
+        "\n",
+        "https://github.com/sunnyday2/flight_on_time/blob/desarrollo/Alex_flight.ipynb\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "hDYGqnvHUw6B"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
