--- a/flightontime_hackaton_e32_alura_latam.ipynb
+++ b/flightontime_hackaton_e32_alura_latam.ipynb
@@ -6399,8 +6399,7 @@
         "plt.title(f\"Matriz de confusión (umbral = {threshold})\")\n",
         "plt.show()\n",
         "\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.pipeline import Pipeline\n",
+        "\n",
         "rf_model_tuned = Pipeline(steps=[\n",
         "    (\"preprocess\", preprocessor),\n",
         "    (\"classifier\", RandomForestClassifier(\n",
@@ -6414,7 +6413,7 @@
         "\n",
         "rf_model_tuned.fit(X_train, y_train)\n",
         "\n",
-        "from sklearn.metrics import classification_report, roc_auc_score\n",
+        "# Predicciones del modelo ajustado\n",
         "\n",
         "y_pred_rf_tuned = rf_model_tuned.predict(X_test)\n",
         "y_proba_rf_tuned = rf_model_tuned.predict_proba(X_test)[:, 1]\n",
@@ -6441,9 +6440,9 @@
           "height": 1000
         },
         "id": "Oe95HBz1XnBT",
-        "outputId": "40cb3a2a-5a7c-4a18-b602-cfe305bcc878"
+        "outputId": "4c5c8ad7-b4db-46ea-f9a5-496a92c76fd0"
       },
-      "execution_count": 58,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
