docs: explica configuración de API key

--- a/flightontime_hackaton_e32_alura_latam.ipynb
+++ b/flightontime_hackaton_e32_alura_latam.ipynb
@@ -4728,6 +4728,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Para usar https://api.openweathermap.org/data/2.5/weather necesitas una API key asociada a una cuenta de OpenWeather.\n",
+        "\n",
+        "Pasos para obtener la llave:\n",
+        "\n",
+        "*   Crear una cuenta en OpenWeather (sign up).\n",
+        "*   Verificar el correo (OpenWeather indica que hay verificación por email y que luego se entrega un correo de bienvenida con la API key).\n",
+        "*   Entrar al dashboard/cuenta y ubicar la sección `API keys` (ahí puedes ver tu key y crear adicionales).\n"
+      ],
+      "metadata": {
+        "id": "FBXT-z7Lrchk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def get_weather_openweather(lat, lon, api_key):\n",
@@ -4775,10 +4790,32 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Configuremos las llaves de APIs en el entorno (“secrets” del notebook) por motivos de seguridad, mantenimiento y operación. Si la llave se compromete o expira, se reemplaza en el entorno y no obliga a cambiar notebooks, funciones ni redeploys.\n",
+        "\n",
+        "Para una correcta ejecución de esa celda, es necesario tener una llave configurada en su sistema.\n"
+      ],
+      "metadata": {
+        "id": "p_U_FYTSntAO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "from google.colab import userdata\n",
-        "OPENWEATHER_API_KEY = userdata.get(\"OPENWEATHER_API_KEY\")\n",
+        "try:\n",
+        "    # Solo existe en Colab\n",
+        "    from google.colab import userdata  # type: ignore\n",
+        "    key = userdata.get(\"OPENWEATHER_API_KEY\")\n",
+        "    if key:  # si está definido en Secrets y con acceso habilitado\n",
+        "        os.environ[\"OPENWEATHER_API_KEY\"] = key\n",
+        "except Exception:\n",
+        "    # Fuera de Colab (Jupyter local, Kaggle, etc.)\n",
+        "    pass\n",
+        "\n",
+        "OPENWEATHER_API_KEY = os.getenv(\"OPENWEATHER_API_KEY\")\n",
+        "if not OPENWEATHER_API_KEY:\n",
+        "    raise ValueError(\"Falta OPENWEATHER_API_KEY (Secrets/ENV).\")\n",
         "\n",
         "for _, row in cities_weather.iterrows():\n",
         "    try:\n",
@@ -4807,9 +4844,9 @@
           "height": 206
         },
         "id": "bfC8d1tSVLwN",
-        "outputId": "ead079a0-675a-4bf5-952a-f88928c539da"
+        "outputId": "c3bce18c-d0e4-45c1-f8f3-1dbf89c9c261"
       },
-      "execution_count": 111,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4824,7 +4861,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d3fee1f1-65ac-4bdc-a34e-a8269c4e886b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2bb05ca3-ba00-4967-82a5-d8543a8fc923\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -4891,7 +4928,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d3fee1f1-65ac-4bdc-a34e-a8269c4e886b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2bb05ca3-ba00-4967-82a5-d8543a8fc923')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -4943,12 +4980,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d3fee1f1-65ac-4bdc-a34e-a8269c4e886b button.colab-df-convert');\n",
+              "        document.querySelector('#df-2bb05ca3-ba00-4967-82a5-d8543a8fc923 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d3fee1f1-65ac-4bdc-a34e-a8269c4e886b');\n",
+              "        const element = document.querySelector('#df-2bb05ca3-ba00-4967-82a5-d8543a8fc923');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -4968,8 +5005,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-31fda27e-fb0a-408f-b00e-9cd7d912f7af\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-31fda27e-fb0a-408f-b00e-9cd7d912f7af')\"\n",
+              "    <div id=\"df-8a6ffe79-b7ce-441c-8008-e101d553b549\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8a6ffe79-b7ce-441c-8008-e101d553b549')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -5088,7 +5125,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-31fda27e-fb0a-408f-b00e-9cd7d912f7af button');\n",
+              "            document.querySelector('#df-8a6ffe79-b7ce-441c-8008-e101d553b549 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -5101,11 +5138,11 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "df_weather",
-              "summary": "{\n  \"name\": \"df_weather\",\n  \"rows\": 182,\n  \"fields\": [\n    {\n      \"column\": \"city_clean\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 182,\n        \"samples\": [\n          \"Los Angeles\",\n          \"Anchorage\",\n          \"Burlington\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"temp_mean\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 10.209293863345735,\n        \"min\": -37.99,\n        \"max\": 31.87,\n        \"num_unique_values\": 173,\n        \"samples\": [\n          3.45,\n          -8.79,\n          -37.99\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"precipitation\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.8856179799914419,\n        \"min\": 0.0,\n        \"max\": 11.28,\n        \"num_unique_values\": 15,\n        \"samples\": [\n          11.28,\n          0.15,\n          0.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"wind_speed\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2.522276726661845,\n        \"min\": 0.0,\n        \"max\": 14.31,\n        \"num_unique_values\": 42,\n        \"samples\": [\n          8.89,\n          1.79,\n          4.12\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"df_weather\",\n  \"rows\": 364,\n  \"fields\": [\n    {\n      \"column\": \"city_clean\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 182,\n        \"samples\": [\n          \"Los Angeles\",\n          \"Anchorage\",\n          \"Burlington\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"temp_mean\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 10.0304182382495,\n        \"min\": -37.99,\n        \"max\": 35.28,\n        \"num_unique_values\": 335,\n        \"samples\": [\n          6.01,\n          26.77,\n          7.19\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"precipitation\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.7119642850736406,\n        \"min\": 0.0,\n        \"max\": 11.28,\n        \"num_unique_values\": 24,\n        \"samples\": [\n          0.11,\n          0.87,\n          0.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"wind_speed\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2.5264989380912914,\n        \"min\": 0.0,\n        \"max\": 14.31,\n        \"num_unique_values\": 52,\n        \"samples\": [\n          13.38,\n          2.47,\n          9.77\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 111
+          "execution_count": 146
         }
       ]
     },
